# parser

./: ProjectCode.txt  main.py  pyproject.toml  readme.md  rialcom_tariffs.xlsx  tariffs.xlsx
src/: config.py  excel_exporter.py  parser.py  tariff.py
src/parser/: data_extractor.py  html_fetcher.py  parser.py  section_parser.py  table_parser.py  tariff_processor.py
